refactor: Make some fixes and refactor for templates.

--- a/test_assignment/src/templates/partials/navbar.html
+++ b/test_assignment/src/templates/partials/navbar.html
@@ -24,7 +24,7 @@
             <span>|</span>
             <li><a href=""> Images </a></li>
             <span>|</span>
-            <li><a href=""> Pricing </a></li>
+            <li><a href="{% url 'core:pricing' %}"> Pricing </a></li>
             <span>|</span>
             <li><a href=""> Contact Us </a></li>
             <span>|</span>
