--- a/test_assignment/src/templates/partials/books_list.html
+++ b/test_assignment/src/templates/partials/books_list.html
@@ -4,32 +4,13 @@
 
 {% block css %}
 
-<style>
-.book-detail-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-color: #f5f5f5;
-}
+<link rel="stylesheet" href="{% static 'css/books_list.css' %}">
 
-.book-detail-card {
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    max-width: 600px;
-    width: 100%;
-}
+{% endblock %}
 
-.book-detail-card h2 {
-    margin-top: 0;
-}
+{% block js %}
 
-.book-detail-card p {
-    margin: 10px 0;
-}
-</style>
+    <script src="{% static 'js/books_list.js' %}"></script>
 
 {% endblock %}
 
@@ -40,26 +21,6 @@
 
 {% include 'partials/navbar.html' %}
 
-<style>
-    .book-container {
-        margin: 20px;
-        padding: 20px;
-    }
-    .book-container ul {
-        list-style-type: none;
-    }
-    .book-container li {
-        margin-bottom: 20px;
-        padding: 10px;
-        border-bottom: 1px solid #ddd;
-    }
-    .book-container h2 {
-        margin-bottom: 10px;
-    }
-    .book-container p {
-        margin-bottom: 5px;
-    }
-</style>
 
 <div class="book-container">
         <ul>
