feat: Add create, delete, update, django_update_subscription_confirmed, paypal_update_subscription_confirmed, confirm_delete_subscription template.

--- a/test_assignment/src/static/css/partials/search.css
+++ b/test_assignment/src/static/css/partials/search.css
@@ -7,6 +7,21 @@
     font-family: 'Poppins', sans-serif;
 }
 
+.search {
+    position: relative;
+}
+
+.suggestions-box {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    right: 0;
+    background: white;
+    z-index: 1000;
+    max-height: 200px;
+    overflow-y: auto;
+}
+
 .search-form {
     background: #fff;
     width: 600px;
