--- a/test_assignment/src/templates/subscriptions/create_subscription.html
+++ b/test_assignment/src/templates/subscriptions/create_subscription.html
@@ -3,41 +3,9 @@
 
 
 {% block css %}
-<style>
-    .subscription-activated {
-        font-family: 'Poppins', sans-serif;
-        text-align: center;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        padding: 20px;
-        border-radius: 10px;
-        background-color: #f9f9f9;
-        margin: 60px auto;
-        max-width: 600px;
-    }
 
-    .subscription-activated h5 {
-        font-size: 1.5em;
-        color: #333;
-    }
+<link rel="stylesheet" href="{% static 'css/subscriptions/create_subscription.css' %}">
 
-    .subscription-activated h1 {
-        font-size: 3em;
-        color: #28a745;
-    }
-
-    .subscription-activated p {
-        font-size: 1.2em;
-        color: #555;
-    }
-
-    .subscription-activated .btn {
-        font-size: 1em;
-        padding: 10px 20px;
-        border-radius: 5px;
-        color: #333;
-    }
-
-</style>
 {% endblock %}
 
 {% block content %}
@@ -47,14 +15,14 @@
 <div class="subscription-activated">
     <h5>{{ subscription_plan|title }} subscription activated!</h5>
     <br>
-    <h1>✅</h1>
+    <h1> ✅ </h1>
     <br>
     <p>
         Congratulations on activating your {{ subscription_plan }} subscription!
         You are now eligible for the perks that are associated with this plan.
     </p>
     <br>
-        <a class="btn btn-success" type="button" href="{% url 'core:index' %}">
+    <a class="btn btn-success" type="button" href="{% url 'core:index' %}">
         &gt; &nbsp; Go Back
     </a>
 </div>
