fix: errors with templates.

--- a/test_assignment/src/templates/partials/books_list.html
+++ b/test_assignment/src/templates/partials/books_list.html
@@ -4,7 +4,7 @@
 
 {% block css %}
 
-<link rel="stylesheet" href="{% static 'css/books_list.css' %}">
+<link rel="stylesheet" href="{% static 'css/partials/books_list.css' %}">
 
 {% endblock %}
 
