--- a/test_assignment/src/templates/partials/footer.html
+++ b/test_assignment/src/templates/partials/footer.html
@@ -1,7 +1,7 @@
 
 {% load static %}
 
-{% block css %}<link rel="stylesheet" href="{% static 'css/footer.css' %}"> {% endblock %}
+{% block css %}<link rel="stylesheet" href="{% static 'css/partials/footer.css' %}"> {% endblock %}
 
 <body>
     <footer class="footer">
