--- a/test_assignment/src/templates/partials/navbar.html
+++ b/test_assignment/src/templates/partials/navbar.html
@@ -2,7 +2,7 @@
 
 {% block css %}
 
-<link rel="stylesheet" href="{% static 'css/navbar.css' %}">
+<link rel="stylesheet" href="{% static 'css/partials/navbar.css' %}">
 
 {% endblock %}
 
