--- a/test_assignment/src/templates/partials/search.html
+++ b/test_assignment/src/templates/partials/search.html
@@ -1,34 +1,9 @@
 {% load static %}
 
 
-
 {% block css %}
 
-<link rel="stylesheet" href="{% static 'css/search.css' %}">
-
-<style>
-        .search {
-        position: relative;
-    }
-    .suggestions-box {
-        position: absolute;
-        top: 100%;
-        left: 0;
-        right: 0;
-        background: white;
-        z-index: 1000;
-        max-height: 200px;
-        overflow-y: auto;
-    }
-    .suggestion {
-        padding: 10px;
-        cursor: pointer;
-    }
-    .suggestion:hover {
-        background: #f0f0f0;
-    }
-</style>
-</style>
+<link rel="stylesheet" href="{% static 'css/partials/search.css' %}">
 
 {% endblock %}
 
