--- a/test_assignment/src/templates/registration/password/password_reset_complete.html
+++ b/test_assignment/src/templates/registration/password/password_reset_complete.html
@@ -4,7 +4,7 @@
 
 {% block css %}
 
-<link rel="stylesheet" href="{% static 'css/password_reset_done.css' %}">
+<link rel="stylesheet" href="{% static 'css/password/password_reset_done.css' %}">
 
 {% endblock %}
 
