--- a/test_assignment/src/templates/registration/registration.html
+++ b/test_assignment/src/templates/registration/registration.html
@@ -2,7 +2,9 @@
 {% load static %}
 
 {% block css %}
-<link rel="stylesheet" href="{% static 'css/registration.css' %}">
+
+<link rel="stylesheet" href="{% static 'css/registration/registration.css' %}">
+
 {% endblock %}
 
 {% block title %} {{ title }} {% endblock %}
