fix: Change urls in subscriptions templates.

--- a/test_assignment/src/templates/subscriptions/confirm_delete_subscription.html
+++ b/test_assignment/src/templates/subscriptions/confirm_delete_subscription.html
@@ -7,6 +7,8 @@
 
 {% endblock %}
 
+{% block title %} {{ title }} {% endblock %}
+
 {% block content %}
 {% include 'partials/navbar.html' %}
 <br>
@@ -19,8 +21,8 @@
         Please confirm if you want to cancel your subscription. This action cannot be undone.
     </p>
     <br>
-    <a class="btn btn-cancel" href="{% url 'subscriptions:delete_subscription' subscription_id %}"> Cancel
+    <a class="btn btn-cancel" href="{% url 'subscriptions:delete_subscription' subscription_id %}"> &gt; &nbsp; Cancel
         Subscription </a>
-    <a class="btn btn-confirm" href="{% url 'core:index' %}">Return to Dashboard</a>
+    <a class="btn btn-confirm" href="{% url 'core:index' %}"> &gt; &nbsp; Return to Dashboard</a>
 </div>
 {% endblock %}
